--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
+*{
+    margin: 0%;
+}
 .container{
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 
 }
 .box{
     width: 100px;
     height:100px;
-border-style: 1px solid;
-
+    border-radius: 10%;
+    background-color: blue;
 }
 /* Your CSS Code here. */
