--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 *{
     margin: 0%;
 }
-.container{
+.container-fluid{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: nowrap;
+    flex-wrap:wrap;
+    row-gap: auto;
+    position: relative;
 
 }
 .box{
     width: 100px;
     height:100px;
-    border-radius: 10%;
     background-color: blue;
+   /* position: absolute; */
+   align-items: center;
 }
 /* Your CSS Code here. */
